--- a/src/config.ini
+++ b/src/config.ini
@@ -5,4 +5,5 @@ debug = True
 tui_refresh_seconds = 30
 local_sound = ara_ara.mp3
 min_query_interval = 1
-date_fmt = '%d-%m-%Y %H:%M:%S'
+date_fmt = '%Y-%m-%d %H:%M:%S'
+browser = firefox
