improved monitoring, debugged cli

--- a/src/cli/config.ini
+++ b/src/cli/config.ini
@@ -2,7 +2,7 @@
 server = localhost
 port = 6000
 dump_logs = true
-log_date_fmt = %H:%M:%S.%f
+log_date_fmt = %Y-%m-%dT%H:%M:%S.%f
 refresh_seconds = 30
 default_local_sound = notification.wav
 browser = firefox
