--- a/src/server/config.ini
+++ b/src/server/config.ini
@@ -4,7 +4,7 @@ port = 6000
 dump_logs = true
 min_query_interval = 1
 date_fmt = %Y-%m-%d %H:%M:%S
-log_date_fmt = %H:%M:%S.%f
+log_date_fmt = %Y-%m-%dT%H:%M:%S.%f
 captcha_kw = captcha-delivery;strona wymaga zalogowania
 user_agent = Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/102.0.0.0 Safari/537.36
 secure = true
