--- a/src/server/config.ini
+++ b/src/server/config.ini
@@ -6,6 +6,6 @@ min_query_interval = 1
 date_fmt = %Y-%m-%d %H:%M:%S
 log_date_fmt = %Y-%m-%dT%H:%M:%S.%f
 captcha_kw = captcha-delivery;strona wymaga zalogowania
-user_agent = Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/102.0.0.0 Safari/537.36
+user_agent = none
 secure = true
 dump_page_content = false
