notification files are now fetched from remote

--- a/src/server/config.ini
+++ b/src/server/config.ini
@@ -5,7 +5,8 @@ dump_logs = true
 min_query_interval = 1
 date_fmt = %Y-%m-%d %H:%M:%S
 log_date_fmt = %Y-%m-%dT%H:%M:%S.%f
-captcha_kw = captcha-delivery;strona wymaga zalogowania
+captcha_kw = captcha-delivery;strona wymaga zalogowania;403 forbidden
 user_agent = none
 secure = true
 dump_page_content = false
+default_sound = notification.wav
