proper logging and extended query validation

--- a/src/server/config.ini
+++ b/src/server/config.ini
@@ -4,9 +4,10 @@ port = 6000
 dump_logs = true
 min_query_interval = 1
 date_fmt = %Y-%m-%d %H:%M:%S
-log_date_fmt = %Y-%m-%dT%H:%M:%S.%f
+log_date_fmt = %Y-%m-%dT%H:%M:%S
 captcha_kw = captcha-delivery;strona wymaga zalogowania;403 forbidden
 user_agent = none
-secure = true
-dump_page_content = false
+secure = false
+dump_page_content = true
 default_sound = notification.wav
+log_level = DEBUG
