Implemented user config and cyclic UserManager watch

--- a/src/server/config.ini
+++ b/src/server/config.ini
@@ -9,5 +9,6 @@ captcha_kw = captcha-delivery;strona wymaga zalogowania;403 forbidden
 user_agent = none
 secure = false
 dump_page_content = true
-default_sound = notification.wav
-log_level = DEBUG
+default_sound = notification.mp3
+log_level = INFO
+user_manager_interval = 5
